--- a/src/index.css
+++ b/src/index.css
@@ -56,14 +56,16 @@ body {
     flex-direction: column-reverse;
     align-items: center;
 
+
+
     top: 54px;
     left: 0;
     position: absolute;
 
-    width: 25vw;
+
+    width: 430px;
     height: calc(100vh - 54px);
     background-color: white;
-    
 
     z-index: 10;
 }
@@ -95,27 +97,25 @@ body {
     text-align: center;
     
     background: linear-gradient(to bottom, #ffffff 90%, #dddddd);
-    
+
     overflow: auto;
 }
 
 .list-element {
+    display: flex;
+    align-items: center;
+    border-radius: 10px;
+    overflow: hidden;
+    background-color: #fff;
+
     height: 14vh;
     width: 90%;
     
-    padding: 15px;
-    margin: 5px;
-    
-    display: inline-block;
+    padding: 7px;
+    margin: 10px;
     text-align: left;
     
-    border-radius: 15px;
-
-    /* 그림자 스타일 설정 */
-    box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.2);
-}
-.list-element-title {
-    font-size: 20;
+    border-radius: 5px;
 }
 .list-element-document {
 
@@ -123,6 +123,95 @@ body {
 .list-element-moreinfo {
 
 }
+
+
+.list-element-top, .list-element-bottom {
+    height: 33.33%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.list-element-bottom {
+    align-items: bottom;
+}
+
+.list-element-middle {
+    height: 33.33%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+}
+
+
+
+/* 스타일 수정 가능 */
+.list-element-image-container {
+    flex: 0 0 33%;
+    height: 100%;
+    overflow: hidden;
+    border-radius: 5px;
+}
+
+.list-element-image {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.list-element-details {
+    flex: 1;
+    padding: 6px;
+    margin: 0 0 0 10px;
+    height: 100%;
+}
+
+.list-element-title {
+    float: left;
+    font-size: 18px;
+    font-weight: bold;
+}
+
+.list-element-price {
+    font-size: 18px;
+    color: #333;
+    float: left;
+}
+
+.list-element-sale {
+    margin-right: 5px;
+    color: #e74c3c;
+    font-size: 18px;
+    font-weight: bold;
+    float: left;
+}
+
+.list-element-store,
+.list-element-address {
+    font-size: 13px;
+    font-weight: normal;
+}
+.list-element-distance {
+    font-size: 11px;
+    font-weight: normal;
+    color: black;
+}
+
+.test-km {
+    font-size: 15px;
+    margin-top: 3px;
+    font-weight: bold;
+    color: blue;
+}
+
+.test-top-distance-container { 
+    height: 100%;
+    float: right;
+    display: flex;
+    align-items: center;
+}
+
+
 
 /* 스크롤바 설정*/
 .list-container::-webkit-scrollbar {
