--- a/src/css/loginModal.css
+++ b/src/css/loginModal.css
@@ -1,18 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Noto+Sans:wght@700&family=Poppins:wght@400;500;600&display=swap');
-*{
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-  font-family: "Poppins", sans-serif;
+
+.hidden {
+  display: none;
 }
-body{
-  margin: 0;
-  padding: 0;
-  background: linear-gradient(120deg,#2980b9, #8e44ad);
-  height: 100vh;
-  overflow: hidden;
-}
-.center{
+
+.center {
   position: absolute;
   top: 50%;
   left: 50%;
@@ -20,23 +12,27 @@ body{
   width: 400px;
   background: white;
   border-radius: 10px;
-  box-shadow: 10px 10px 15px rgba(0,0,0,0.05);
+  box-shadow: 10px 10px 15px rgba(0, 0, 0, 0.05);
 }
-.center h1{
+
+.center h1 {
   text-align: center;
   padding: 20px 0;
   border-bottom: 1px solid silver;
 }
-.center form{
+
+.center form {
   padding: 0 40px;
   box-sizing: border-box;
 }
-form .txt_field{
+
+form .txt_field {
   position: relative;
   border-bottom: 2px solid #adadad;
   margin: 30px 0;
 }
-.txt_field input{
+
+.txt_field input {
   width: 100%;
   padding: 0 5px;
   height: 40px;
@@ -45,7 +41,8 @@ form .txt_field{
   background: none;
   outline: none;
 }
-.txt_field label{
+
+.txt_field label {
   position: absolute;
   top: 50%;
   left: 5px;
@@ -55,38 +52,44 @@ form .txt_field{
   pointer-events: none;
   transition: .5s;
 }
-.txt_field span::before{
+
+.txt_field span::before {
   content: '';
   position: absolute;
   top: 40px;
   left: 0;
   width: 0%;
   height: 2px;
-  background: #2691d9;
+  background: #242424;
   transition: .5s;
 }
-.txt_field input:focus ~ label,
-.txt_field input:valid ~ label{
+
+.txt_field input:focus~label,
+.txt_field input:valid~label {
   top: -5px;
-  color: #2691d9;
+  color: #242424;
 }
-.txt_field input:focus ~ span::before,
-.txt_field input:valid ~ span::before{
+
+.txt_field input:focus~span::before,
+.txt_field input:valid~span::before {
   width: 100%;
 }
-.pass{
+
+.pass {
   margin: -5px 0 20px 5px;
   color: #a6a6a6;
   cursor: pointer;
 }
-.pass:hover{
+
+.pass:hover {
   text-decoration: underline;
 }
-input[type="submit"]{
+
+input[type="submit"] {
   width: 100%;
   height: 50px;
   border: 1px solid;
-  background: #2691d9;
+  background: #242424;
   border-radius: 25px;
   font-size: 18px;
   color: #e9f4fb;
@@ -94,20 +97,24 @@ input[type="submit"]{
   cursor: pointer;
   outline: none;
 }
-input[type="submit"]:hover{
+
+input[type="submit"]:hover {
   border-color: #2691d9;
   transition: .5s;
 }
-.signup_link{
+
+.signup_link {
   margin: 30px 0;
   text-align: center;
   font-size: 16px;
   color: #666666;
 }
-.signup_link a{
-  color: #2691d9;
+
+.signup_link a {
+  color: #242424;
   text-decoration: none;
 }
-.signup_link a:hover{
+
+.signup_link a:hover {
   text-decoration: underline;
 }
