--- a/src/css/index.css
+++ b/src/css/index.css
@@ -1,26 +1,32 @@
 @import url('https://fonts.googleapis.com/css2?family=Noto+Sans:wght@700&family=Poppins:wght@400;500;600&display=swap');
 
+/* font custom */
+@font-face {
+    font-family: GmarketSans;
+    src: url('/src/media/font/GmarketSansTTFBold.ttf') format('woff');
+    font-weight: 700;
+}
+@font-face {
+    font-family: GmarketSans;
+    src: url('/src/media/font/GmarketSansTTFMedium.ttf') format('woff');
+    font-weight: 500;
+}
+@font-face {
+    font-family: GmarketSans;
+    src: url('/src/media/font/GmarketSansTTFLight.ttf') format('woff');
+    font-weight: 300;
+}
+
 * {
     box-sizing: border-box;
     scroll-behavior: smooth;
+
+    font-family: "GmarketSans", sans-serif;
 }
 
 /* scroll block */
 body {
     overflow: hidden;
-}
-
-/* font custom */
-@font-face {
-    /* 폰트 이름 */
-    font-family: 'BMDOHYUN';
-    /* .ttf 파일의 경로 */
-    src: url('font.ttf') format('truetype');
-}
-
-body {
-    /* 폰트 적용 및 대체 폰트 */
-    font-family: 'BMDOHYUN', sans-serif;
 }
 
 
@@ -29,10 +35,13 @@ body {
 }
 
 #mapDiv {
-    width: 100vw;
+    width: calc(100vw - 500px);
     height: calc(100vh - 54px);
 
     position: relative;
+    
+    left: 500px;
+    
     z-index: 1;
 }
 
@@ -129,6 +138,9 @@ body {
 
     overflow: hidden;
 
+    white-space: nowrap;
+    text-overflow: ellipsis;
+
     display: flex;
     flex-direction: row;
 
@@ -182,6 +194,8 @@ body {
     font-size: 15px;
     color: black;
 
+    font-weight: bold;
+
     line-height: 150%;
 }
 
@@ -193,27 +207,36 @@ body {
 }
 
 #list-element-info-product-price-container {
-    display: flex;
-    flex-direction: row;
-
-    line-height: 370%;
+    line-height: 240%;
 }
-#list-element-info-product-price {
-    font-size: 30px;
-    color: red;
-
+#list-element-info-product-discount-container {
+    height: 20px;
+    display: flex;
 }
 #list-element-info-product-discount {
+    font-size: 15px;
+    color: gray;
+
+}
+#list-element-info-product-price {
     margin-left: 4px;
+    font-size: 15px;
+    color: gray;
+    text-decoration: line-through;
+}
+#list-element-info-product-discount-price {
     font-size: 20px;
-    color: black;
+    color: red;
 }
 
 #list-element-info-distance-div {
-    position: relative;
+    position: absolute;
 
-    top: -98.2%;
-    left: 115%;
+    /* top: -98.2%;
+    left: 83%; */
+    
+    top: 75%;
+    left: 83%;
 }
 #list-element-info-distance-title{
     font-size: 10px;
@@ -226,27 +249,229 @@ body {
     font-weight: bold;
 }
 
+/* 상품 정보 창 */
+#product-info {
+    width: 400px;
+    height: calc(100vh - 54px);
 
+    top: 54px;
+    left: 500px;
 
+    padding: 20px;
+
+    overflow-y: scroll;
+
+    display: none;
+    position: absolute;
+    background-color: white;
+
+    z-index: 9;
+}
+
+#product-info-close-btn {
+    position: fixed;
+
+    font-size: 30px;
+    text-align: center;
+
+    background-color: #f3f3f3;
+    border-radius: 10px;
+
+    height: 40px;
+    width: 40px;
+
+    margin-bottom: 25px;
+
+    cursor: pointer;
+}
+
+#product-info-product-image {
+    max-width: 100%;
+
+    margin-bottom: 25px;
+
+    border-radius: 15px;
+}
+
+#product-info-shop-info-div {
+    background-color: white;
+    border-radius: 15px;
+
+    box-shadow: 0px 0px 15px rgb(218, 218, 218);
+
+    display: flex;
+    flex-direction: row;
+    
+    padding: 20px;
+
+    width: 100%;
+    height: 100px;
+}
+
+#product-info-shop-image {
+    max-height: 100%;
+    border-radius: 100000px;
+}
+
+#product-info-shop-name-address {
+    margin-left: 20px;
+}
+
+#product-info-shop-name {
+    font-size: 20px;
+    font-weight: bold;
+
+    line-height: 170%;
+}
+
+#product-info-shop-address {
+    font-size: 12px;
+    font-weight: bold;
+    color: gray;
+}
+
+#product-info-shop-distance-div {
+    margin-left: 20px;
+    margin-top: 15px;
+}
+#product-info-shop-distance-title {
+    font-size: 12px;
+    font-weight: bold;
+    color: gray;
+}
+#product-info-shop-distance {
+    font-size: 18px;
+    font-weight: bold;
+    color: blue
+}
+
+/* 상점 정보 */
+#product-info-product-name {
+    margin-top: 20px;
+    margin-left: 5px;
+    
+    color: black;
+
+    font-weight: bold;
+    font-size: 20px;
+}
+
+#product-info-product-price-div {
+    display: flex;
+    flex-direction: row;
+    
+    margin-top: 50px;
+
+    width: 100%;
+
+}
+
+#product-info-product-discount-price {
+    font-size: 30px;
+    color: red;
+    font-weight: bold;
+
+}
+
+#product-info-product-discount-div {
+    display: flex;
+    flex-direction: row;
+
+    color: gray;
+    font-weight: bold;
+
+    
+}
+
+#product-info-product-discount {
+}
+#product-info-product-price {
+    margin-left: 5px;
+    margin-right: 20%;
+}
+
+#product-info-size-contanior {
+    margin-top: 50px;
+}
+#product-info-size {
+    font-size: 20px;
+    font-weight: bold;
+
+    margin: 20px;
+}
+#product-info-size-box {
+    font-size: 20px;
+    font-weight: bold;
+    
+    width: 100%;
+    
+    padding: 15px;
+    text-align: center;
+    
+    border: solid 1.5px;
+    border-radius: 10px;
+}
+
+#product-info-comment-contanior {
+    margin-top: 50px;
+}
+#product-info-comment {
+    font-size: 20px;
+    font-weight: bold;
+    
+    margin: 20px;
+}
+#product-info-comment-box {
+    font-size: 15px;
+    font-weight: bold;
+    
+    width: 100%;
+    height: 150px;
+    
+    padding: 15px;
+    text-align: left;
+    
+    border-radius: 10px;
+    box-shadow: 0px 0px 10px #e2e2e2;
+}
+
+#product-info-loca-contanior {
+    margin-top: 50px;
+}
+#product-info-loca {
+    font-size: 20px;
+    font-weight: bold;
+    
+    margin: 20px;
+}
+#product-info-loca-map {    
+    width: 100%;
+    height: 150px;
+    
+    padding: 15px;
+    text-align: left;
+    
+    border-radius: 10px;
+    box-shadow: 0px 0px 10px #e2e2e2;
+}
 
 
 /* 스크롤바 설정*/
-.list-container::-webkit-scrollbar {
+::-webkit-scrollbar {
     width: 7px;
 }
 
 /* 스크롤바 막대 설정*/
-.list-container::-webkit-scrollbar-thumb {
+::-webkit-scrollbar-thumb {
     background-color: #232323;
     border-radius: 2px;
     border: 2px solid rgba(0, 0, 0, 0.8);
 }
 
 /* 스크롤바 뒷 배경 설정*/
-.list-container::-webkit-scrollbar-track {
+::-webkit-scrollbar-track {
     background-color: rgba(0, 0, 0, 0);
 }
-
 
 
 
