--- a/src/css/index.css
+++ b/src/css/index.css
@@ -35,14 +35,14 @@ body {
 }
 
 #mapDiv {
-    width: calc(100vw - 500px);
     height: calc(100vh - 54px);
+    width: calc(100vw - 500px);
 
     position: relative;
     
     left: 500px;
     
-    z-index: 1;
+    z-index: 0;
 }
 
 #getMyPositionBtn {
@@ -297,7 +297,7 @@ body {
     background-color: white;
     border-radius: 15px;
 
-    box-shadow: 0px 0px 15px rgb(218, 218, 218);
+    box-shadow: 0px 0px 15px #e2e2e2;
 
     display: flex;
     flex-direction: row;
@@ -432,7 +432,7 @@ body {
     text-align: left;
     
     border-radius: 10px;
-    box-shadow: 0px 0px 10px #e2e2e2;
+    box-shadow: 0px 0px 15px #e2e2e2;
 }
 
 #product-info-loca-contanior {
@@ -448,12 +448,29 @@ body {
     width: 100%;
     height: 150px;
     
-    padding: 15px;
     text-align: left;
     
     border-radius: 10px;
-    box-shadow: 0px 0px 10px #e2e2e2;
+
+    box-shadow: 0px 0px 15px #e2e2e2;
 }
+#product-info-reservation-contanior {
+    margin-top: 10px;
+
+    font-size: 20px;
+    font-weight: bold;
+    
+    width: 100%;
+    
+    padding: 15px;
+    text-align: center;
+    
+    border: solid 1.5px;
+    border-radius: 10px;
+
+    box-shadow: 0px 0px 15px #e2e2e2;
+}
+
 
 
 /* 스크롤바 설정*/
